tests/snapshot/error/source_locations/expression/yield_star/next_result_get_named_property_value_throws.js
var iterable = {
  [Symbol.iterator]() {
    return {
      next() {
        return {
          done: true,
          get value() {
            throw new Error();
          },
        };
      },
      get return() {
        throw new Error();
      }
    }
  }
};

function *generator() {
  yield* iterable;
}

var iter = generator();
iter.next();